1.7
  - Move autobrew script to external repo

1.6
  - Update protobuf to 3.2.0 on Windows and OSX

1.5
  - Fix for Solaris
  - Switch to C++11 on Windows

1.4
  - Add support for reading/writing geobuf (binary geojson)

1.3
  - Use new Homebrew URL in configure script
  - Switch to CXX_STD=CXX11 to suppress some warnings

1.2
  - Fix configure script to test if protoc version matches libprotobuf

1.1
  - Cross reference to RProtoBuf pkg in description and readme
  - Add option 'skip_native' in serialize_pb()
  - Fix bug where 'native' objects were stored in 'raw' field

1.0
  - Initial CRAN release