@@ -1,3 +1,4 @@
 PKG_CPPFLAGS=@cflags@
+PKG_CXXFLAGS=$(C_VISIBILITY)
 PKG_LIBS=@libs@
 CXX_STD=CXX11
